Fixed bug for non-authenticated users - Changed zoom on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1255,7 +1255,7 @@ li {
 
 @media (max-height: 850px) {
   #home-section {
-    zoom: 0.90;
+    zoom: 0.85;
     -moz-transform: scale(0.9);
     -moz-transform-origin: 0 0;
   }
